k8s/dev/app_config/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekc-frontend-service
spec:
  selector:
    app: ekc-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
