k8s/dev/app_config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekc-app-service
spec:
  selector:
    app: ekc-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
