k8s/dev/app_config/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ekc-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: ekc.sgsafesurf.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ekc-app-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: ekc-app-service
                port:
                  number: 80
          - path: /home/
            pathType: Prefix
            backend:
              service:
                name: ekc-frontend-service
                port:
                  number: 80
